--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,10 +34,11 @@ alloc = ["chacha20poly1305/alloc"]
 # Enables support of Cocoon::from_entropy() which gets random bytes from OsRng.
 getrandom = ["rand/getrandom"]
 
-# Reduces the count of KDF iterations to 1000 which speeds up debugging.
-# However "debug" feature make a Cocoon container less secure, which format
-# becomes incompatible with the release build.
-debug = []
+[profile.test]
+opt-level = 3
+
+[profile.dev.package.sha2]
+opt-level = 3
 
 [package.metadata.docs.rs]
 all-features = true
