--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,9 +34,11 @@ alloc = ["chacha20poly1305/alloc"]
 # Enables support of Cocoon::from_entropy() which gets random bytes from OsRng.
 getrandom = ["rand/getrandom"]
 
+# To speed up PBKDF2.
 [profile.test]
 opt-level = 3
 
+# To speed up PBKDF2.
 [profile.dev.package.sha2]
 opt-level = 3
 
