--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ rand = { version = "0.7.3", default-features = false }
 sha2 = { version = "0.8.1", default-features = false }
 zeroize = { version = "1.1.0", default-features = false }
 
+[dev-dependencies]
+borsh = "0.7"
+
 [features]
 # Enables `std` feature by default.
 default = ["std"]
