Leave only MIT license for simplification for now

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "A simple protected container with strong encryption and format validation."
 authors = ["Alexander Fadeev <fadeevab.com@gmail.com>"]
 edition = "2018"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 keywords = ["secure", "storage", "keystore", "wrapper", "container"]
 categories = ["encoding", "no-std", "parser-implementations"]
 homepage = "https://github.com/fadeevab/cocoon"
