--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -15,3 +15,7 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
