--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -15,7 +15,27 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
-    - name: Coveralls
+
+  coverage:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install grcov
+      run: cargo install grcov
+    - name: Generate lcov
+      env:
+        CARGO_INCREMENTAL: 0
+        RUSTFLAGS: >-
+          -Zprofile -Ccodegen-units=1 -Copt-level=0
+          -Clink-dead-code -Coverflow-checks=off
+          -Zpanic_abort_tests -Cpanic=abort
+        RUSTDOCFLAGS: -Cpanic=abort
+      run: |
+        cargo build --verbose
+        cargo test --verbose
+        grcov ./target/debug/ -s . -t lcov --llvm --branch --ignore-not-existing -o ./coverage/
+    - name: Send to Coveralls
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
