Change GitHub Actions to actions-rs templates

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -21,20 +21,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Install grcov
-      run: cargo install grcov
-    - name: Generate lcov
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly
+        override: true
+    - uses: actions-rs/cargo@v1
+      with:
+        command: test
+        args: --all-features --no-fail-fast
       env:
         CARGO_INCREMENTAL: 0
         RUSTFLAGS: >-
-          -Zprofile -Ccodegen-units=1 -Copt-level=0
-          -Clink-dead-code -Coverflow-checks=off
-          -Zpanic_abort_tests -Cpanic=abort
-        RUSTDOCFLAGS: -Cpanic=abort
-      run: |
-        cargo build --verbose
-        cargo test --verbose
-        grcov ./target/debug/ -s . -t lcov --llvm --branch --ignore-not-existing -o ./coverage/
+          -Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code
+          -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests
+        RUSTDOCFLAGS: >-
+          -Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code
+          -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
+    - uses: actions-rs/grcov@v0.1
     - name: Send to Coveralls
       uses: coverallsapp/github-action@master
       with:
