Change 'encoding' to 'cryptography' category

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Alexander Fadeev <fadeevab.com@gmail.com>"]
 edition = "2018"
 license = "MIT"
 keywords = ["encryption", "storage", "keystore", "parser", "container"]
-categories = ["encoding", "no-std", "parser-implementations"]
+categories = ["cryptography", "no-std", "parser-implementations"]
 homepage = "https://github.com/fadeevab/cocoon"
 repository = "https://github.com/fadeevab/cocoon"
 documentation = "https://docs.rs/cocoon"
