Excluding unreachable lines from test coverage
Frustrating that more tests I add less coverage I have on Coveralls.
Let's try to see what kind of coverage I'll have now.

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -48,7 +48,8 @@ jobs:
       run: |
         mkdir coverage
         ./grcov ./target/debug/ -s . -t lcov --llvm --branch --ignore-not-existing --ignore "/*" \
-                --excl-line "#\[" --excl-br-line "#\[" -o ./coverage/lcov.info
+                --excl-line '#\[|(=> panic!)|(unreachable!)' \
+                --excl-br-line '#\[|(=> panic!)|(unreachable!)' -o ./coverage/lcov.info
     - name: Send to Coveralls
       uses: coverallsapp/github-action@master
       with:
