--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -50,7 +50,5 @@ jobs:
         ./grcov ./target/debug/ -s . -t lcov --llvm --branch --ignore-not-existing --ignore "/*" \
                 --excl-line '#\[|(=> panic!)|(unreachable!)' \
                 --excl-br-line '#\[|(=> panic!)|(unreachable!)' -o ./coverage/lcov.info
-    - name: Send to Coveralls
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Send to Codecov
+      uses: codecov/codecov-action@v1
