--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -48,7 +48,7 @@ jobs:
       run: |
         mkdir coverage
         ./grcov ./target/debug/ -s . -t lcov --llvm --branch --ignore-not-existing --ignore "/*" \
-                --excl-line '#\[|(=> panic!)|(unreachable!)' \
+                --excl-line '#\[|(=> panic!)|(unreachable!)|Io\(std::io::Error\)' \
                 --excl-br-line '#\[|(=> panic!)|(unreachable!)' -o ./coverage/lcov.info
     - name: Send to Coveralls
       uses: coverallsapp/github-action@master
