--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -48,8 +48,8 @@ jobs:
       run: |
         mkdir coverage
         ./grcov ./target/debug/ -s . -t lcov --llvm --branch --ignore-not-existing --ignore "/*" \
-                --excl-line '#\[|(=> panic!)|(unreachable!)|Io\(std::io::Error\)' \
-                --excl-br-line '#\[|(=> panic!)|(unreachable!)' -o ./coverage/lcov.info
+                --excl-line '#\[|=> panic!|unreachable!|Io\(std::io::Error\)' \
+                --excl-br-line '#\[|=> panic!|unreachable!|assert_..!' -o ./coverage/lcov.info
     - name: Send to Coveralls
       uses: coverallsapp/github-action@master
       with:
