--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 
 [dependencies]
 aes-gcm = "0.9.3"
-chacha20poly1305 = { version = "0.8.1", default-features = false, features = ["chacha20", "heapless"] }
+chacha20poly1305 = { version = "0.8.1", default-features = false, features = ["chacha20"] }
 hmac = "0.7.1"
 pbkdf2 = { version = "0.3.0", default-features = false, features = ["sha2", "hmac"] }
 rand = { version = "0.7.3", default-features = false }
