--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,16 +13,16 @@ documentation = "https://docs.rs/cocoon"
 readme = "README.md"
 
 [dependencies]
-aes-gcm = "0.9.3"
-chacha20poly1305 = { version = "0.8.1", default-features = false, features = ["chacha20"] }
-hmac = "0.7.1"
-pbkdf2 = { version = "0.3.0", default-features = false, features = ["sha2", "hmac"] }
-rand = { version = "0.7.3", default-features = false }
-sha2 = { version = "0.8.1", default-features = false }
-zeroize = { version = "1.1.0", default-features = false }
+aes-gcm = "0.9"
+chacha20poly1305 = { version = "0.9", default-features = false }
+hmac = "0.11"
+pbkdf2 = { version = "0.9", default-features = false, features = ["sha2", "hmac"] }
+rand = { version = "0.8", default-features = false, features = ["std_rng"] }
+sha2 = { version = "0.9", default-features = false }
+zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
-borsh = "0.8.1"
+borsh = "0.9"
 
 [features]
 # Enables `std` feature by default.
