--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -28,6 +28,7 @@ jobs:
       run: cargo test --verbose
 
   coverage:
+    if: false # Disable the job temporarily until Coverall.io recovers
     runs-on: ubuntu-latest
 
     steps:
