--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -3,11 +3,11 @@ name: Cocoon
 on:
   push:
     branches:
-      - master
+      - main
 
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -46,7 +46,7 @@ jobs:
       run: cargo test --all-features
     - name: Install grcov
       run: |
-        curl -L https://github.com/mozilla/grcov/releases/latest/download/grcov-linux-x86_64.tar.bz2 \
+        curl -L https://github.com/mozilla/grcov/releases/latest/download/grcov-x86_64-unknown-linux-gnu.tar.bz2 \
           | tar jxf -
     - name: Run grcov
       run: |
