--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ documentation = "https://docs.rs/cocoon"
 readme = "README.md"
 
 [dependencies]
+aead = "0.4"
 aes-gcm = "0.9"
 chacha20poly1305 = { version = "0", default-features = false }
 hmac = "0.11"
