--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -51,7 +51,8 @@ jobs:
     - name: Run grcov
       run: |
         mkdir coverage
-        ./grcov ./target/debug/ -s . -t lcov --llvm --branch --ignore-not-existing --ignore "/*" \
+        ./grcov ./target/debug/ -s . -t lcov --llvm --branch --ignore-not-existing \
+                --ignore "/*" --ignore "//" \
                 --excl-line '#\[|=> panic!|unreachable!|Io\(std::io::Error\)' \
                 --excl-br-line '#\[|=> panic!|unreachable!|assert_..!' -o ./coverage/lcov.info
     - name: Send to Coveralls
