--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -51,8 +51,9 @@ jobs:
     - name: Run grcov
       run: |
         mkdir coverage
-        ./grcov ./target/debug/ -s . -t lcov --llvm --branch --ignore-not-existing --ignore "/*" \
-                --excl-line '#\[|=> panic!|unreachable!|Io\(std::io::Error\)|//!|///|^[ }]*$| +TooShort,|impl From' \
+        ./grcov ./target/debug/ -s . -t lcov --llvm --branch --ignore-not-existing \
+                --ignore "/*" --ignore "src/error.rs" \
+                --excl-line '#\[|=> panic!|unreachable!|Io\(std::io::Error\)|//!|///|^[ }]*$' \
                 --excl-br-line '#\[|=> panic!|unreachable!|assert_..!|//!|///' -o ./coverage/lcov.info
     - name: Send to Coveralls
       uses: coverallsapp/github-action@master
