--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -52,7 +52,7 @@ jobs:
       run: |
         mkdir coverage
         ./grcov ./target/debug/ -s . -t lcov --llvm --branch --ignore-not-existing \
-                --ignore "/*" --ignore "src/error.rs" \
+                --ignore "/*" \
                 --excl-line '#\[|=> panic!|unreachable!|Io\(std::io::Error\)|//!|///|^[ }]*$' \
                 --excl-br-line '#\[|=> panic!|unreachable!|assert_..!|//!|///' -o ./coverage/lcov.info
     - name: Send to Coveralls
