--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -33,7 +33,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Select Rust nightly build
-      run: rustup default nightly-2021-11-11
+      run: rustup default nightly
     - name: Test with profiling
       env:
         CARGO_INCREMENTAL: 0
@@ -51,9 +51,10 @@ jobs:
     - name: Run grcov
       run: |
         mkdir coverage
-        ./grcov ./target/debug/ -s . -t lcov --llvm --branch --ignore-not-existing --ignore "/*" \
-                --excl-line '#\[|=> panic!|unreachable!|Io\(std::io::Error\)' \
-                --excl-br-line '#\[|=> panic!|unreachable!|assert_..!' -o ./coverage/lcov.info
+        ./grcov ./target/debug/ -s . -t lcov --llvm --branch --ignore-not-existing \
+                --ignore "/*" --ignore "src/error.rs" \
+                --excl-line '#\[|=> panic!|unreachable!|Io\(std::io::Error\)|//!|///|^[ }]*$' \
+                --excl-br-line '#\[|=> panic!|unreachable!|assert_..!|//!|///' -o ./coverage/lcov.info
     - name: Send to Coveralls
       uses: coverallsapp/github-action@master
       with:
