--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ default = ["std"]
 
 # Enables all features, including support of simplified Cocoon API, using `rand::thread_rng`,
 # and API related to `std::io`: wrap to writer, unwrap from reader.
-std = ["alloc", "rand/std", "thiserror"]
+std = ["alloc", "rand/std"]
 
 # Enables `Vec` container. Can be used without `std` crate (in "no std" build).
 alloc = ["chacha20poly1305/alloc"]
