Implement std::error::Error for cocoon::Error via optional `thiserror` (#28)
This adds the `std::error::Error` trait implementation to
`cocoon::Error` using the `thiserror` crate.
Note that this is only limited to the presence of feature "thiserror".

Co-authored-by: Alexander Fadeev <fadeevab.com@gmail.com>
Co-authored-by: madomado <madonuko@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ hmac = "0.11"
 pbkdf2 = {version = "0.9", default-features = false, features = ["sha2", "hmac"]}
 rand = {version = "0.8", default-features = false, features = ["std_rng"]}
 sha2 = {version = "0.9", default-features = false}
+thiserror = {version = "1.0.61", optional = true}
 zeroize = {version = "1", default-features = false}
 
 [dev-dependencies]
