--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -37,7 +37,7 @@ jobs:
     - name: Install cargo-llvm-cov
       uses: taiki-e/install-action@cargo-llvm-cov
     - name: Generate code coverage
-      run: cargo llvm-cov --tests --all-features --lcov --output-path ./coverage/lcov.info
+      run: mkdir coverage && cargo llvm-cov --tests --all-features --lcov --output-path ./coverage/lcov.info
     - name: Send to Coveralls
       uses: coverallsapp/github-action@master
       with:
